--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ section{
     background-color: #ffffff;
     border-radius: 10px;
     padding: 15px;
-    width: 500px;
+    max-width: 500px;
     margin: auto;
     box-shadow: 5px 5px 10px #00000065;
 }
